GGG-87 Replace Kickstart resolvers with DataFetchers.